# rust-starter

./: .gitignore  Cargo.toml  Makefile  README.md
cli/: Cargo.toml
cli/src/: main.rs
config/: Cargo.toml
config/src/: keypair.rs  lib.rs
scripts/: lint.sh  release_cli.sh
utils/: Cargo.toml
utils/src/: lib.rs
